--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
-    "@astrojs/starlight": "^0.1.0",
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
-    "astro": "^2.5.0",
+    "@astrojs/starlight": "^0.1.4",
+    "@types/marked": "^5.0.0",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "astro": "^2.6.5",
+    "marked": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-super-responsive-table": "^5.2.1"
