--- a/src/content/exams/exam1.yaml
+++ b/src/content/exams/exam1.yaml
@@ -1,4 +1,5 @@
 title: "exam 1"
 date: "2023-09-13T18:00:00"
 content: "HTTP Protocol"
-notes: exam is in LC F6
+notes: |
+  exam is in LC F6. [Live code](https://youtu.be/nlZ-GRQetbE) for HW1
