--- a/src/content/exams/exam2.yaml
+++ b/src/content/exams/exam2.yaml
@@ -1,4 +1,5 @@
 title: "exam 2"
 date: "2023-10-04T18:00:00"
 content: "Client side concerns"
-notes: exam is in LC F6
+notes: |
+  exam is in LC F6. [Live code](https://youtu.be/-tIcg_Bv_8s) for HW2 (available after 3pm Oct 2nd)
