--- a/src/content/exams/exam5.yaml
+++ b/src/content/exams/exam5.yaml
@@ -1,3 +1,4 @@
 title: "exam 5"
-date: "2023-12-04T15:00:00"
-content: "System design: precise date TBD (during finals week)"
+date: "2023-12-04T08:00:00"
+content: "System design: lightly but not completely cumulative"
+notes: Exam is in **Lecture Center C6**
