--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/react": "^3.1.0",
     "@astrojs/starlight": "^0.21.1",
+    "@astrojs/starlight-tailwind": "^2.0.1",
+    "@astrojs/tailwind": "^5.1.0",
     "@types/marked": "^6.0.0",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
@@ -20,6 +22,7 @@
     "marked": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-super-responsive-table": "^5.2.2"
+    "react-super-responsive-table": "^5.2.2",
+    "tailwindcss": "^3.4.1"
   }
 }
