--- a/src/content/exams/exam5.yaml
+++ b/src/content/exams/exam5.yaml
@@ -1,3 +1,4 @@
 title: "exam 5"
-date: "2024-12-11T14:00:00"
-content: "System Design Concerns (tentative date)"
+date: "2024-12-11T16:40:00"
+content: "System Design"
+note: "Review session in the room from 3:30-4:30"
