--- a/src/content/exams/exam5.yaml
+++ b/src/content/exams/exam5.yaml
@@ -1,4 +1,4 @@
 title: "exam 5"
 date: "2024-12-11T16:40:00"
 content: "System Design"
-note: "Review session in the room from 3:30-4:30"
+notes: "Exam is in **ARC 241**. Review session in the exam room from 3:30-4:30"
