--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^11.1.0",
+    "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^3.6.2",
     "@astrojs/starlight": "^0.28.3",
     "@astrojs/starlight-tailwind": "^2.0.3",
