--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.1.0",
-    "@astrojs/react": "^4.1.1",
-    "@astrojs/starlight": "^0.30.2",
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/starlight": "^0.30.3",
     "@astrojs/starlight-tailwind": "^3.0.0",
-    "@astrojs/tailwind": "^5.1.3",
-    "@types/react": "^19.0.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "astro": "^5.0.9",
+    "astro": "^5.1.2",
     "dayjs": "^1.11.13",
-    "marked": "^15.0.4",
+    "isomorphic-dompurify": "^2.19.0",
+    "marked": "^15.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.17"
   }
 }
