--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest",
+    "validate-dates": "tsx src/scripts/validateDates.ts",
+    "convert-dates": "tsx src/scripts/convertToRelativeDates.ts"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.4",
@@ -24,5 +27,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.8"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.4",
+    "vitest": "^1.3.1"
   }
 }
