--- a/src/content/exams/exam2.yaml
+++ b/src/content/exams/exam2.yaml
@@ -1,3 +1,7 @@
-title: "exam 2"
-date: "2024-10-17T14:00:00"
-content: "Client Side Concerns"
+title: exam 2
+date: '2024-10-17T14:00:00'
+content: Client Side Concerns
+relative_date:
+  week: 8
+  day: 2
+  time: '14:00:00'
