--- a/src/content/exams/exam4.yaml
+++ b/src/content/exams/exam4.yaml
@@ -1,3 +1,7 @@
-title: "exam 4"
-date: "2024-11-26T14:00:00"
-content: "Security Concerns"
+title: exam 4
+date: '2024-11-26T14:00:00'
+content: Security Concerns
+relative_date:
+  week: 13
+  day: 1
+  time: '14:00:00'
