--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "test": "vitest",
-    "validate-dates": "tsx src/scripts/validateDates.ts",
-    "convert-dates": "tsx src/scripts/convertToRelativeDates.ts"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.4",
@@ -27,9 +24,5 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.8"
-  },
-  "devDependencies": {
-    "tsx": "^4.19.4",
-    "vitest": "^1.3.1"
   }
 }
