--- a/src/content/exams/exam5.yaml
+++ b/src/content/exams/exam5.yaml
@@ -1,8 +1,7 @@
 title: exam 5
-date: '2024-12-11T16:40:00'
-content: System Design
-notes: Exam is in **ARC 241**. Review session in the exam room from 3:30-4:30
+content: Comprehensive Final Exam
+notes: Exam location and exact time is currently **TBD**, this is a placeholder date.
 relative_date:
-  week: 15
-  day: 0
+  week: 16
+  day: Friday
   time: '16:40:00'
