more vibe coding

--- a/src/content/exams/exam5.yaml
+++ b/src/content/exams/exam5.yaml
@@ -1,7 +1,5 @@
 title: exam 5
-content: Comprehensive Final Exam
-notes: Exam location and exact time is currently **TBD**, this is a placeholder date.
+content: System Design
 relative_date:
-  week: 16
-  day: Friday
-  time: '16:40:00'
+  week: 15
+  day: 2
