--- a/src/content/exams/exam1.yaml
+++ b/src/content/exams/exam1.yaml
@@ -1,3 +1,5 @@
-title: "exam 1"
-date: "2024-09-19T14:00:00"
-content: "HTTP Protocol"
+title: exam 1
+content: The Web Programming Model
+relative_date:
+  week: 3
+  day: 2
