--- a/src/content/exams/exam3.yaml
+++ b/src/content/exams/exam3.yaml
@@ -1,3 +1,5 @@
-title: "exam 3"
-date: "2024-11-07T14:00:00"
-content: "Server Side Concerns"
+title: exam 3
+content: Server Side Concerns
+relative_date:
+  week: 10
+  day: 1
