--- a/src/content/exams/exam5.yaml
+++ b/src/content/exams/exam5.yaml
@@ -1,4 +1,5 @@
-title: "exam 5"
-date: "2024-12-11T16:40:00"
-content: "System Design"
-notes: "Exam is in **ARC 241**. Review session in the exam room from 3:30-4:30"
+title: exam 5
+content: System Design
+relative_date:
+  week: 15
+  day: 2
